public/css/style.css
/* ... */
.ftco-navbar-light.scrolled .nav-link.active {
    color: #78d5ef !important;
}
.ftco-navbar-light.scrolled.awake {
    margin-top: 0px;
    transition: 0.3s all ease-out;
}
.ftco-navbar-light.scrolled.sleep {
    transition: 0.3s all ease-out;
}
.ftco-navbar-light.scrolled .navbar-brand {
    color: #404044;
}

.navbar-brand {
    font-weight: 700;
    line-height: 1;
    font-size: 20px;
    text-transform: uppercase;
}

.owl-carousel {
    position: relative;
}
.owl-carousel .owl-item {
    opacity: 0.4;
}
.owl-carousel .owl-item.active {
    opacity: 1;
}
.owl-carousel .owl-nav {
    position: absolute;
    top: 50%;
    width: 100%;
}
.owl-carousel .owl-nav .owl-prev,
.owl-carousel .owl-nav .owl-next {
    position: absolute;
    transform: translateY(-50%);
    margin-top: -10px;
    -moz-transition: all 0.7s ease;
    -o-transition: all 0.7s ease;
    -webkit-transition: all 0.7s ease;
    -ms-transition: all 0.7s ease;
    transition: all 0.7s ease;
    opacity: 0;
}
.owl-carousel .owl-nav .owl-prev span:before,
.owl-carousel .owl-nav .owl-next span:before {
    font-size: 40px;
}
.owl-carousel .owl-nav .owl-prev {
    left: 0;
}
.owl-carousel .owl-nav .owl-next {
    right: 0;
}
.owl-carousel .owl-dots {
    text-align: center;
}
.owl-carousel .owl-dots .owl-dot {
    width: 10px;
    height: 10px;
    margin: 5px;
    border-radius: 50%;
    background: #dadadc;
}
.owl-carousel .owl-dots .owl-dot.active {
    background: #78d5ef;
}
.owl-carousel:hover .owl-nav .owl-prev,
.owl-carousel:hover .owl-nav .owl-next {
    opacity: 1;
}
.owl-carousel:hover .owl-nav .owl-prev {
    left: -20px;
}
.owl-carousel:hover .owl-nav .owl-next {
    right: -20px;
}

.owl-carousel.owl-drag .owl-item {
    -ms-touch-action: pan-y;
    touch-action: pan-y;
}

.list-social {
    margin-bottom: 0;
}
.list-social li a {
    font-size: 60px;
    margin: 40px;
    line-height: 80px;
    display: block;
    width: 80px;
    height: 80px;
    color: white;
    border-radius: 100%;
}

.owl-custom-nav {
    float: right;
    position: relative;
    z-index: 10;
    border: 1px solid red;
}
.owl-custom-nav .owl-custom-prev,
.owl-custom-nav .owl-custom-next {
    padding: 10px;
    font-size: 30px;
    background: #ccc;
    line-height: 0;
    width: 60px;
    text-align: center;
    display: inline-block;
}

.home-slider {
    z-index: 0;
    position: relative;
}
.home-slider .slider-item {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    height: calc(100vh - 117px);
    min-height: 800px;
    position: relative;
}
.home-slider .slider-item .overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    content: '';
    opacity: 0.99;
    background: #448ef6;
    background: -moz-linear-gradient(45deg, #1abc9c 0%, #3498db 100%);
    background: -webkit-gradient(
        left bottom,
        right top,
        color-stop(0%, #1abc9c),
        color-stop(100%, #3498db)
    );
    background: -webkit-linear-gradient(45deg, #1abc9c 0%, #3498db 100%);
    background: -o-linear-gradient(45deg, #1abc9c 0%, #3498db 100%);
    background: -ms-linear-gradient(45deg, #1abc9c 0%, #3498db 100%);
    background: linear-gradient(45deg, #1abc9c 0%, #3498db 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#1abc9c", endColorstr="#3498db", GradientType=1 );
}
.home-slider .slider-item .slider-text {
    color: #fff;
    height: calc(100vh - 117px);
    min-height: 500px;
}
.home-slider .slider-item .slider-text h1 {
    font-size: 52px;
    color: #fff;
    line-height: 1.2;
    font-weight: 200;
}
@media (max-width: 991.98px) {
    .home-slider .slider-item .slider-text h1 {
        font-size: 40px;
    }
}
.home-slider .slider-item .slider-text h1 strong {
    font-weight: 800;
}
.home-slider .slider-item .slider-text .typewrite > .wrap {
    position: relative;
    border-right: 0.08em solid rgba(255, 255, 255, 0);
}
.home-slider .slider-item .slider-text .typewrite > .wrap:after {
    position: absolute;
    top: 0;
    bottom: 12px;
    right: -5px;
    width: 4px;
    content: '';
    background: #fff;
}
.home-slider .slider-item .slider-text p {
    font-size: 20px;
    line-height: 1.5;
    font-weight: 300;
    color: rgba(255, 255, 255, 0.8);
}
.home-slider .slider-item .slider-text p strong {
    font-weight: 700;
}
.home-slider .slider-item .slider-text p strong a {
    color: #fff;
}
.home-slider .slider-item .slider-text .breadcrumbs {
    text-transform: uppercase;
    font-size: 13px;
    letter-spacing: 1px;
    margin-bottom: 20px;
    z-index: 99;
}
.home-slider .slider-item .slider-text .breadcrumbs span {
    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
}
.home-slider .slider-item .slider-text .breadcrumbs span a {
    color: #fff;
}
.home-slider .slider-item .slider-text .bread {
    font-weight: 300 !important;
}
.home-slider .slider-item .slider-text .btn-primary {
    border: 1px solid rgba(255, 255, 255, 0.4);
    -webkit-border-radius: 30px;
    -moz-border-radius: 30px;
    -ms-border-radius: 30px;
    border-radius: 30px;
}
.home-slider .slider-item .slider-text .btn-primary:hover,
.home-slider .slider-item .slider-text .btn-primary:focus {
    background: #fff !important;
    color: #404044;
}
.home-slider .slider-item.bread-wrap .slider-text {
    color: #fff;
    min-height: 750px;
}
.home-slider .owl-nav .owl-prev span,
.home-slider .owl-nav .owl-next span {
    color: #fff;
}
.home-slider:hover .owl-nav .owl-prev,
.home-slider:hover .owl-nav .owl-next {
    opacity: 1;
}
.home-slider:hover .owl-nav .owl-prev {
    left: 20px;
}
.home-slider:hover .owl-nav .owl-next {
    right: 20px;
}
.home-slider .owl-dots {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 60px;
    width: 100%;
    text-align: center;
}
/* ... */

